server/antlr4-tsplang/src/TspParser.js
// Generated from C:\Source\vscode-tsplang\server\grammar\Tsp.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var TspListener = require('./TspListener').TspListener;
var grammarFileName = "Tsp.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "';'", "'do'", "'end'", "'while'", "'repeat'", 
                     "'until'", "'if'", "'then'", "'elseif'", "'else'", 
                     "'return'", "','", "'break'", "'for'", "'='", "'in'", 
                     "'function'", "'.'", "':'", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'", "'or'", "'and'", "'<'", "'>'", "'<='", 
                     "'>='", "'~='", "'!='", "'=='", "'..'", "'+'", "'-'", 
                     "'*'", "'/'", "'&'", "'|'", "'^^'", "'<<'", "'>>'", 
                     "'not'", "'!'", "'^'", "'nil'", null, "'local'", "'...'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, "NIL", "BOOLEAN", "LOCAL", "VARARG", 
                      "NAME", "NORMALSTRING", "CHARSTRING", "LONGSTRING", 
                      "INT", "HEX", "FLOAT", "LONGCOMMENT", "LINE_COMMENT", 
                      "HORIZONTAL_WS", "VERTICAL_WS", "SHEBANG" ];

var ruleNames =  [ "chunk", "statement", "assignment", "value", "expression", 
                   "prefix", "suffix", "index", "variable", "functionCall", 
                   "args", "tableConstructor", "fieldList", "field", "operatorOr", 
                   "operatorAnd", "operatorComparison", "operatorStrcat", 
                   "operatorAddSub", "operatorMulDiv", "operatorBitwiseAnd", 
                   "operatorBitwiseOr", "operatorBitwiseXor", "operatorBitwiseShift", 
                   "operatorUnary", "operatorPower", "number", "string" ];

function TspParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

TspParser.prototype = Object.create(antlr4.Parser.prototype);
TspParser.prototype.constructor = TspParser;

Object.defineProperty(TspParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

TspParser.EOF = antlr4.Token.EOF;
TspParser.T__0 = 1;
TspParser.T__1 = 2;
TspParser.T__2 = 3;
TspParser.T__3 = 4;
TspParser.T__4 = 5;
TspParser.T__5 = 6;
TspParser.T__6 = 7;
TspParser.T__7 = 8;
TspParser.T__8 = 9;
TspParser.T__9 = 10;
TspParser.T__10 = 11;
TspParser.T__11 = 12;
TspParser.T__12 = 13;
TspParser.T__13 = 14;
TspParser.T__14 = 15;
TspParser.T__15 = 16;
TspParser.T__16 = 17;
TspParser.T__17 = 18;
TspParser.T__18 = 19;
TspParser.T__19 = 20;
TspParser.T__20 = 21;
TspParser.T__21 = 22;
TspParser.T__22 = 23;
TspParser.T__23 = 24;
TspParser.T__24 = 25;
TspParser.T__25 = 26;
TspParser.T__26 = 27;
TspParser.T__27 = 28;
TspParser.T__28 = 29;
TspParser.T__29 = 30;
TspParser.T__30 = 31;
TspParser.T__31 = 32;
TspParser.T__32 = 33;
TspParser.T__33 = 34;
TspParser.T__34 = 35;
TspParser.T__35 = 36;
TspParser.T__36 = 37;
TspParser.T__37 = 38;
TspParser.T__38 = 39;
TspParser.T__39 = 40;
TspParser.T__40 = 41;
TspParser.T__41 = 42;
TspParser.T__42 = 43;
TspParser.T__43 = 44;
TspParser.T__44 = 45;
TspParser.T__45 = 46;
TspParser.T__46 = 47;
TspParser.NIL = 48;
TspParser.BOOLEAN = 49;
TspParser.LOCAL = 50;
TspParser.VARARG = 51;
TspParser.NAME = 52;
TspParser.NORMALSTRING = 53;
TspParser.CHARSTRING = 54;
TspParser.LONGSTRING = 55;
TspParser.INT = 56;
TspParser.HEX = 57;
TspParser.FLOAT = 58;
TspParser.LONGCOMMENT = 59;
TspParser.LINE_COMMENT = 60;
TspParser.HORIZONTAL_WS = 61;
TspParser.VERTICAL_WS = 62;
TspParser.SHEBANG = 63;

TspParser.RULE_chunk = 0;
TspParser.RULE_statement = 1;
TspParser.RULE_assignment = 2;
TspParser.RULE_value = 3;
TspParser.RULE_expression = 4;
TspParser.RULE_prefix = 5;
TspParser.RULE_suffix = 6;
TspParser.RULE_index = 7;
TspParser.RULE_variable = 8;
TspParser.RULE_functionCall = 9;
TspParser.RULE_args = 10;
TspParser.RULE_tableConstructor = 11;
TspParser.RULE_fieldList = 12;
TspParser.RULE_field = 13;
TspParser.RULE_operatorOr = 14;
TspParser.RULE_operatorAnd = 15;
TspParser.RULE_operatorComparison = 16;
TspParser.RULE_operatorStrcat = 17;
TspParser.RULE_operatorAddSub = 18;
TspParser.RULE_operatorMulDiv = 19;
TspParser.RULE_operatorBitwiseAnd = 20;
TspParser.RULE_operatorBitwiseOr = 21;
TspParser.RULE_operatorBitwiseXor = 22;
TspParser.RULE_operatorBitwiseShift = 23;
TspParser.RULE_operatorUnary = 24;
TspParser.RULE_operatorPower = 25;
TspParser.RULE_number = 26;
TspParser.RULE_string = 27;

function ChunkContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TspParser.RULE_chunk;
    return this;
}

ChunkContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ChunkContext.prototype.constructor = ChunkContext;

ChunkContext.prototype.EOF = function() {
    return this.getToken(TspParser.EOF, 0);
};

ChunkContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

ChunkContext.prototype.enterRule = function(listener) {
    if(listener instanceof TspListener ) {
        listener.enterChunk(this);
	}
};

ChunkContext.prototype.exitRule = function(listener) {
    if(listener instanceof TspListener ) {
        listener.exitChunk(this);
	}
};




TspParser.ChunkContext = ChunkContext;

TspParser.prototype.chunk = function() {

    var localctx = new ChunkContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, TspParser.RULE_chunk);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 62;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TspParser.T__1) | (1 << TspParser.T__3) | (1 << TspParser.T__4) | (1 << TspParser.T__6) | (1 << TspParser.T__10) | (1 << TspParser.T__12) | (1 << TspParser.T__13) | (1 << TspParser.T__16) | (1 << TspParser.T__19))) !== 0) || _la===TspParser.LOCAL || _la===TspParser.NAME) {
            this.state = 56;
            this.statement();
            this.state = 58;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===TspParser.T__0) {
                this.state = 57;
                this.match(TspParser.T__0);
            }

            this.state = 64;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 65;
        this.match(TspParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TspParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.assignment = function() {
    return this.getTypedRuleContext(AssignmentContext,0);
};

StatementContext.prototype.functionCall = function() {
    return this.getTypedRuleContext(FunctionCallContext,0);
};

StatementContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

StatementContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};

StatementContext.prototype.NAME = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(TspParser.NAME);
    } else {
        return this.getToken(TspParser.NAME, i);
    }
};


StatementContext.prototype.VARARG = function() {
    return this.getToken(TspParser.VARARG, 0);
};

StatementContext.prototype.LOCAL = function() {
    return this.getToken(TspParser.LOCAL, 0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof TspListener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof TspListener ) {
        listener.exitStatement(this);
	}
};




TspParser.StatementContext = StatementContext;

TspParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, TspParser.RULE_statement);
    var _la = 0; // Token type
    try {
        this.state = 303;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,40,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 67;
            this.assignment();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 68;
            this.functionCall();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 69;
            this.match(TspParser.T__1);
            this.state = 76;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TspParser.T__1) | (1 << TspParser.T__3) | (1 << TspParser.T__4) | (1 << TspParser.T__6) | (1 << TspParser.T__10) | (1 << TspParser.T__12) | (1 << TspParser.T__13) | (1 << TspParser.T__16) | (1 << TspParser.T__19))) !== 0) || _la===TspParser.LOCAL || _la===TspParser.NAME) {
                this.state = 70;
                this.statement();
                this.state = 72;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===TspParser.T__0) {
                    this.state = 71;
                    this.match(TspParser.T__0);
                }

                this.state = 78;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 79;
            this.match(TspParser.T__2);
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 80;
            this.match(TspParser.T__3);
            this.state = 81;
            this.expression();
            this.state = 82;
            this.match(TspParser.T__1);
            this.state = 89;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TspParser.T__1) | (1 << TspParser.T__3) | (1 << TspParser.T__4) | (1 << TspParser.T__6) | (1 << TspParser.T__10) | (1 << TspParser.T__12) | (1 << TspParser.T__13) | (1 << TspParser.T__16) | (1 << TspParser.T__19))) !== 0) || _la===TspParser.LOCAL || _la===TspParser.NAME) {
                this.state = 83;
                this.statement();
                this.state = 85;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===TspParser.T__0) {
                    this.state = 84;
                    this.match(TspParser.T__0);
                }

                this.state = 91;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 92;
            this.match(TspParser.T__2);
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 94;
            this.match(TspParser.T__4);
            this.state = 101;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TspParser.T__1) | (1 << TspParser.T__3) | (1 << TspParser.T__4) | (1 << TspParser.T__6) | (1 << TspParser.T__10) | (1 << TspParser.T__12) | (1 << TspParser.T__13) | (1 << TspParser.T__16) | (1 << TspParser.T__19))) !== 0) || _la===TspParser.LOCAL || _la===TspParser.NAME) {
                this.state = 95;
                this.statement();
                this.state = 97;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===TspParser.T__0) {
                    this.state = 96;
                    this.match(TspParser.T__0);
                }

                this.state = 103;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 104;
            this.match(TspParser.T__5);
            this.state = 105;
            this.expression();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 106;
            this.match(TspParser.T__6);
            this.state = 107;
            this.expression();
            this.state = 108;
            this.match(TspParser.T__7);
            this.state = 115;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TspParser.T__1) | (1 << TspParser.T__3) | (1 << TspParser.T__4) | (1 << TspParser.T__6) | (1 << TspParser.T__10) | (1 << TspParser.T__12) | (1 << TspParser.T__13) | (1 << TspParser.T__16) | (1 << TspParser.T__19))) !== 0) || _la===TspParser.LOCAL || _la===TspParser.NAME) {
                this.state = 109;
                this.statement();
                this.state = 111;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===TspParser.T__0) {
                    this.state = 110;
                    this.match(TspParser.T__0);
                }

                this.state = 117;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 132;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===TspParser.T__8) {
                this.state = 118;
                this.match(TspParser.T__8);
                this.state = 119;
                this.expression();
                this.state = 120;
                this.match(TspParser.T__7);
                this.state = 127;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TspParser.T__1) | (1 << TspParser.T__3) | (1 << TspParser.T__4) | (1 << TspParser.T__6) | (1 << TspParser.T__10) | (1 << TspParser.T__12) | (1 << TspParser.T__13) | (1 << TspParser.T__16) | (1 << TspParser.T__19))) !== 0) || _la===TspParser.LOCAL || _la===TspParser.NAME) {
                    this.state = 121;
                    this.statement();
                    this.state = 123;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    if(_la===TspParser.T__0) {
                        this.state = 122;
                        this.match(TspParser.T__0);
                    }

                    this.state = 129;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 134;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 145;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===TspParser.T__9) {
                this.state = 135;
                this.match(TspParser.T__9);
                this.state = 142;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TspParser.T__1) | (1 << TspParser.T__3) | (1 << TspParser.T__4) | (1 << TspParser.T__6) | (1 << TspParser.T__10) | (1 << TspParser.T__12) | (1 << TspParser.T__13) | (1 << TspParser.T__16) | (1 << TspParser.T__19))) !== 0) || _la===TspParser.LOCAL || _la===TspParser.NAME) {
                    this.state = 136;
                    this.statement();
                    this.state = 138;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    if(_la===TspParser.T__0) {
                        this.state = 137;
                        this.match(TspParser.T__0);
                    }

                    this.state = 144;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
            }

            this.state = 147;
            this.match(TspParser.T__2);
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 149;
            this.match(TspParser.T__10);
            this.state = 158;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,17,this._ctx);
            if(la_===1) {
                this.state = 150;
                this.expression();
                this.state = 155;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while(_la===TspParser.T__11) {
                    this.state = 151;
                    this.match(TspParser.T__11);
                    this.state = 152;
                    this.expression();
                    this.state = 157;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }

            }
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 160;
            this.match(TspParser.T__12);
            break;

        case 9:
            this.enterOuterAlt(localctx, 9);
            this.state = 161;
            this.match(TspParser.T__13);
            this.state = 162;
            this.match(TspParser.NAME);
            this.state = 163;
            this.match(TspParser.T__14);
            this.state = 164;
            this.expression();
            this.state = 165;
            this.match(TspParser.T__11);
            this.state = 166;
            this.expression();
            this.state = 169;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===TspParser.T__11) {
                this.state = 167;
                this.match(TspParser.T__11);
                this.state = 168;
                this.expression();
            }

            this.state = 171;
            this.match(TspParser.T__1);
            this.state = 178;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TspParser.T__1) | (1 << TspParser.T__3) | (1 << TspParser.T__4) | (1 << TspParser.T__6) | (1 << TspParser.T__10) | (1 << TspParser.T__12) | (1 << TspParser.T__13) | (1 << TspParser.T__16) | (1 << TspParser.T__19))) !== 0) || _la===TspParser.LOCAL || _la===TspParser.NAME) {
                this.state = 172;
                this.statement();
                this.state = 174;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===TspParser.T__0) {
                    this.state = 173;
                    this.match(TspParser.T__0);
                }

                this.state = 180;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 181;
            this.match(TspParser.T__2);
            break;

        case 10:
            this.enterOuterAlt(localctx, 10);
            this.state = 183;
            this.match(TspParser.T__13);
            this.state = 184;
            this.match(TspParser.NAME);
            this.state = 189;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===TspParser.T__11) {
                this.state = 185;
                this.match(TspParser.T__11);
                this.state = 186;
                this.match(TspParser.NAME);
                this.state = 191;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 192;
            this.match(TspParser.T__15);
            this.state = 193;
            this.expression();
            this.state = 198;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===TspParser.T__11) {
                this.state = 194;
                this.match(TspParser.T__11);
                this.state = 195;
                this.expression();
                this.state = 200;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 201;
            this.match(TspParser.T__1);
            this.state = 208;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TspParser.T__1) | (1 << TspParser.T__3) | (1 << TspParser.T__4) | (1 << TspParser.T__6) | (1 << TspParser.T__10) | (1 << TspParser.T__12) | (1 << TspParser.T__13) | (1 << TspParser.T__16) | (1 << TspParser.T__19))) !== 0) || _la===TspParser.LOCAL || _la===TspParser.NAME) {
                this.state = 202;
                this.statement();
                this.state = 204;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===TspParser.T__0) {
                    this.state = 203;
                    this.match(TspParser.T__0);
                }

                this.state = 210;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 211;
            this.match(TspParser.T__2);
            break;

        case 11:
            this.enterOuterAlt(localctx, 11);
            this.state = 213;
            this.match(TspParser.T__16);
            this.state = 214;
            this.match(TspParser.NAME);
            this.state = 219;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===TspParser.T__17) {
                this.state = 215;
                this.match(TspParser.T__17);
                this.state = 216;
                this.match(TspParser.NAME);
                this.state = 221;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 224;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===TspParser.T__18) {
                this.state = 222;
                this.match(TspParser.T__18);
                this.state = 223;
                this.match(TspParser.NAME);
            }

            this.state = 226;
            this.match(TspParser.T__19);
            this.state = 240;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
            case TspParser.NAME:
            	this.state = 227;
            	this.match(TspParser.NAME);
            	this.state = 232;
            	this._errHandler.sync(this);
            	var _alt = this._interp.adaptivePredict(this._input,27,this._ctx)
            	while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            	    if(_alt===1) {
            	        this.state = 228;
            	        this.match(TspParser.T__11);
            	        this.state = 229;
            	        this.match(TspParser.NAME); 
            	    }
            	    this.state = 234;
            	    this._errHandler.sync(this);
            	    _alt = this._interp.adaptivePredict(this._input,27,this._ctx);
            	}

            	this.state = 237;
            	this._errHandler.sync(this);
            	_la = this._input.LA(1);
            	if(_la===TspParser.T__11) {
            	    this.state = 235;
            	    this.match(TspParser.T__11);
            	    this.state = 236;
            	    this.match(TspParser.VARARG);
            	}

            	break;
            case TspParser.VARARG:
            	this.state = 239;
            	this.match(TspParser.VARARG);
            	break;
            case TspParser.T__20:
            	break;
            default:
            	break;
            }
            this.state = 242;
            this.match(TspParser.T__20);
            this.state = 249;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TspParser.T__1) | (1 << TspParser.T__3) | (1 << TspParser.T__4) | (1 << TspParser.T__6) | (1 << TspParser.T__10) | (1 << TspParser.T__12) | (1 << TspParser.T__13) | (1 << TspParser.T__16) | (1 << TspParser.T__19))) !== 0) || _la===TspParser.LOCAL || _la===TspParser.NAME) {
                this.state = 243;
                this.statement();
                this.state = 245;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===TspParser.T__0) {
                    this.state = 244;
                    this.match(TspParser.T__0);
                }

                this.state = 251;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 252;
            this.match(TspParser.T__2);
            break;
